* Work on search * Several cleanups