@@ -60,6 +60,7 @@ public class NavigationFragment extends AbstractHttpListFragment{
 		{ Statics.ITEM_SERVICES, R.string.services, R.drawable.ic_menu_list, 1, 0 },
 		{ Statics.ITEM_MOVIES, R.string.movies, R.drawable.ic_menu_movie, 1, 0},
 		{ Statics.ITEM_TIMER, R.string.timer, R.drawable.ic_menu_clock, 1, 0},
+		{ Statics.ITEM_EPG_SEARCH, R.string.epg_search, R.drawable.ic_menu_search, 1, 0},
 		{ Statics.ITEM_REMOTE, R.string.virtual_remote, R.drawable.ic_menu_small_tiles, 1, 0},
 		{ Statics.ITEM_CURRENT, R.string.current_service, R.drawable.ic_menu_help, 1, 0},
 		{ Statics.ITEM_POWERSTATE_DIALOG, R.string.powercontrol, R.drawable.ic_menu_power_off, 1, 1 },
@@ -314,7 +315,8 @@ public class NavigationFragment extends AbstractHttpListFragment{
 	
 	@Override
 	public void onCreateOptionsMenu(Menu menu, MenuInflater inflater) {
-	    inflater.inflate(R.menu.preferences, menu);
+		inflater.inflate(R.menu.search, menu);
+		inflater.inflate(R.menu.preferences, menu);
 	}
 
 	public Dialog onCreateDialog(int id) {
@@ -342,7 +344,7 @@ public class NavigationFragment extends AbstractHttpListFragment{
 					EditText timeout = (EditText) dialog.findViewById(R.id.EditTextTimeout);
 
 					Spinner type = (Spinner) dialog.findViewById(R.id.SpinnerMessageType);
-					String t = new Integer(type.getSelectedItemPosition()).toString();
+					String t = Integer.valueOf(type.getSelectedItemPosition()).toString();
 
 					sendMessage(text.getText().toString(), t, timeout.getText().toString());
 				}
@@ -432,7 +434,7 @@ public class NavigationFragment extends AbstractHttpListFragment{
 			buttonSaveSleepTimer.setOnClickListener(new OnClickListener() {
 				@Override
 				public void onClick(View v) {
-					String t = new Integer(time.getCurrent()).toString();
+					String t = Integer.valueOf(time.getCurrent()).toString();
 					int id = action.getCheckedRadioButtonId();
 					String a = SleepTimer.ACTION_STANDBY;
 					
